--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>TV El Migrante HN Sitio WEB Oficial</title>
+<title>TV El Migrante HN Sitio WEB Oficial, Disfruta aqui La Radio y TV EN VIVO 24/7.</title>
 <link rel="shortcut icon" href="favicon.ico">
 <style type="text/css">
 <!--
@@ -451,7 +451,8 @@ function MM_swapImage() { //v3.0
     <tr>
       <td height="144" valign="top" bgcolor="#000000"><p align="center" class="Estilo9 Estilo10 Estilo29"><span class="Estilo45">Copyright Todos los Derechos Reservados</span><br />
           <span class="Estilo33">TV MIGRANTE HN - <strong>EMPRESA DE COMUNICACION </strong>- SE&Ntilde;AL ON-LINE 24/7 Hrs. </span></p>
-      <p align="center" class="Estilo9 Estilo10"><span class="Estilo44"><a href="app_descarga.html" target="_blank">DESC. APP</a> //// *** <a href="privacidad.html" target="_blank">POLITICA Y PRIVACIDAD</a> *** <a href="app_descarga.html">DESCARGAR APP</a> &nbsp;*** <a href="patente_usos.html" target="_parent">PATENTE Y USOS </a>***</span></p>        <p align="center" class="Estilo9 Estilo10">&nbsp;</p></td>
+      <p align="center" class="Estilo9 Estilo10"><span class="Estilo44"><a href="app_descarga.html" target="_blank">DESC. APP</a> //// *** <a href="privacidad.html" target="_blank">POLITICA Y PRIVACIDAD</a> *** <a href="app_descarga.html">DESCARGAR APP</a> &nbsp;*** <a href="patente_usos.html" target="_parent">PATENTE Y USOS </a>***</span></p>        
+      <p align="center" class="Estilo9 Estilo10">*</p></td>
     </tr>
     <tr>
       <td height="76" valign="top" bgcolor="#999999"><p align="center"><span class="Estilo43">*****<br />
