--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@ body {
               </div>
 	          <script type="text/javascript" src="engine1/wowslider.js"></script>
 	          <script type="text/javascript" src="engine1/script.js"></script>
-	          <!-- End WOWSlider.com BODY section -->
-	          <img src="IMG_tv/barra_tvMigranteHN.png" width="983" height="42"></td>
+	          <!-- End WOWSlider.com BODY section --></td>
           </tr>
           
           
