--- a/index.html
+++ b/index.html
@@ -84,8 +84,16 @@ body {
 	font-weight: bold;
 	color: #CC3300;
 }
-.Estilo57 {font-size: 36px}
-.Estilo58 {font-size: 24px; font-weight: bold; color: #CC3300; }
+.Estilo57 {
+	font-size: 36px;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+.Estilo58 {
+	font-size: 22px;
+	font-weight: bold;
+	color: #000000;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+}
 -->
 </style>
 </head>
@@ -209,7 +217,7 @@ body {
       <tr>
         <td height="240" colspan="12" valign="top"><div id="pop-up-message" class="example-container">
 			<div align="center"><img src="imagenes/x.png" alt="x" class="pulse" />		  </div>
-			<h2 align="center" class="Estilo57">Trasmisi&oacute;n en Directo 24/7.			</h2>
+			<h2 align="center" class="Estilo57">Transmisi&oacute;n en Directo 24/7.			</h2>
 		</div></td>
       </tr>
       <tr>
@@ -248,7 +256,7 @@ parent: ["tvmigrantehn.com"]
         </table></td>
       </tr>
       <tr>
-        <td height="66">&nbsp;</td>
+        <td height="247">&nbsp;</td>
         <td width="64">&nbsp;</td>
         <td width="219">&nbsp;</td>
         <td width="34">&nbsp;</td>
