--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ parent: ["tvmigrantehn.com"]
         <td></td>
         <td></td>
         <td colspan="2" valign="top"><div align="center">
-          <p class="Estilo20">&Iacute;ndice</p>
+          <p class="Estilo20">&Iacute;ndice.</p>
         </div></td>
         <td></td>
         <td></td>
