--- a/playwin.html
+++ b/playwin.html
@@ -8,7 +8,7 @@
 
 <body style="margin:0px">
 
-<div id="lunaradio" style='width:1077px; height:100%;background-image: url("https://tvmigrantehn.com/img/fondo.jpg"); background-repeat: no-repeat; background-size: cover; background-position: center;
+<div id="lunaradio" style='width:100%; height:100%;background-image: url("https://tvmigrantehn.com/img/fondo.jpg"); background-repeat: no-repeat; background-size: cover; background-position: center;
 -webkit-border-top-left-radius: 0px;
   -webkit-border-top-right-radius: 0px;
   -webkit-border-bottom-right-radius: 0px;
@@ -28,7 +28,7 @@
 <script src="js/jquery-3.2.1.min.js" type="3bc5e4e5245e387f3290c38f-text/javascript"></script>
 <script src="js/lunaradio.min.js" type="3bc5e4e5245e387f3290c38f-text/javascript"></script>
 
-<div id="lunaradio" style="width:100%; height:550px;"></div>
+<div id="lunaradio" style="width:100%; height:100%;"></div>
 
 <script type="3bc5e4e5245e387f3290c38f-text/javascript">
 $("#lunaradio").lunaradio({
