--- a/LiveTV.html
+++ b/LiveTV.html
@@ -112,7 +112,7 @@ body {
         <td height="95" colspan="5" valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0">
           <!--DWLayoutTable-->
           <tr>
-            <td width="292" rowspan="3" valign="top"><img src="IMG_tv/tvMigraLogoINIX 2.png" width="292" height="87"></td>
+            <td width="292" rowspan="3" valign="top"><a href="index.html"><img src="img/Logo-tvmigrantehn-Inicio.png" width="292" height="87" border="0"></a></td>
               <td width="8" height="44">&nbsp;</td>
               <td width="672" valign="top"><img src="IMG_tv/cintillo_infTV.png" width="672" height="44"></td>
               <td width="11">&nbsp;</td>
@@ -236,7 +236,7 @@ body {
         <td height="76" colspan="5" valign="top" bgcolor="#CCCCCC"><div align="center" class="Estilo46"><span class="Estilo43">*****<br />
           D.R. INT.  Bajo acuerdo Int. Licencia, concedida a Developers:<br />
   <strong>DARWIN  AUDIOMEDIA STREAMING</strong> | Gestiones Comerciales S de R.L de C.V. |<br />
-        Dise&ntilde;o y  Desarrollo Web con la tecnolog&iacute;a de: <strong>SISTEMAS DE OCCIDENTE, HN</strong>. |</span></div></td>
+  Dise&ntilde;o y  Desarrollo Web con la tecnolog&iacute;a de: <strong><a href="https://sistemashonduras.webcindario.com/" target="_blank">SISTEMAS DE OCCIDENTE, HN</a></strong><a href="https://sistemashonduras.webcindario.com/">.</a> |</span></div></td>
       </tr>
     </table>
   </div>
