--- a/play_app/playapp.html
+++ b/play_app/playapp.html
@@ -42,7 +42,7 @@ $("#lunaradio").lunaradio({
 	fontratio: "0.3",
 	radioname: "ESCUCHANDO AHORA LIVE",
 	scroll: "true",
-	coverimage: "https://i.imgur.com/xyjY4UF.jpg",
+	coverimage: "https://tvmigrantehn.com/play_app/radiologob.png",
 	usevisualizer: "fake",
 	coverstyle: "animated",
 	visualizertype: "6",
