--- a/play_app/playapp.html
+++ b/play_app/playapp.html
@@ -8,7 +8,7 @@
 
 <body style="margin:0px">
 
-<div id="lunaradio" style='width:100%; height:100%;background-image: url("https://tvmigrantehn.com/img/fondo.jp"); background-repeat: no-repeat; background-size: cover; background-position: center;
+<div id="lunaradio" style='width:100%; height:100%;background-image: url("https://tvmigrantehn.com/play_app/bg_rd.jpg"); background-repeat: no-repeat; background-size: cover; background-position: center;
 -webkit-border-top-left-radius: 0px;
   -webkit-border-top-right-radius: 0px;
   -webkit-border-bottom-right-radius: 0px;
@@ -40,7 +40,7 @@ $("#lunaradio").lunaradio({
 	fontname: "Saira Condensed",
 	googlefont: "Saira+Condensed:wght@100",
 	fontratio: "0.3",
-	radioname: "ESCUCHANDO AHORA LIVE",
+	radioname: "ESCUCHANDO AHORA LIVE RADIO MIGRANTE HN",
 	scroll: "true",
 	coverimage: "https://tvmigrantehn.com/play_app/radiologob.png",
 	usevisualizer: "fake",
