--- a/app_descarga.html
+++ b/app_descarga.html
@@ -173,7 +173,7 @@ a:link {
     </tr>
     <tr>
       <td height="46">&nbsp;</td>
-      <td colspan="5" valign="top" bgcolor="#FFCC00"><div align="center" class="Estilo2"><a href="apk/app2097422-6e19gx.apk" class="Estilo41">DESCARGUE O PRESIONE AQUI.</a> </div></td>
+      <td colspan="5" valign="top" bgcolor="#FFCC00"><div align="center" class="Estilo2"><a href="https://play.google.com/store/apps/details?id=tv.migrantehn" target="_blank" class="Estilo41">DESCARGUE O PRESIONE AQUI.</a> </div></td>
     <td>&nbsp;</td>
     </tr>
     <tr>
@@ -192,7 +192,7 @@ a:link {
     </tr>
     <tr>
       <td height="82">&nbsp;</td>
-      <td colspan="5" valign="top" bgcolor="#FFCC00"><p align="center"><a href="apk/app2097422-6e19gx.apk"><img src="img_appgeneral/descargar_esapk.png" width="274" height="82" border="0" /></a></p></td>
+      <td colspan="5" valign="top" bgcolor="#FFCC00"><p align="center"><a href="https://play.google.com/store/apps/details?id=tv.migrantehn"><img src="img_appgeneral/descargar_esapk.png" width="274" height="82" border="0" /></a></p></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
