--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ a:active {
 
           <tr>
             <td height="12"></td>
-            <td colspan="2" valign="top"><span class="Estilo2">J</span></td>
+            <td colspan="2" valign="top"><!--DWLayoutEmptyCell-->&nbsp;</td>
             <td></td>
           </tr>
           <tr>
